--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+
+
+          
+          <img src="https://avatars.githubusercontent.com/u/37751297?s=460&u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&v=4" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Jane Doe</h2>
+            <h2>Mateus Borges Rodrigues</h2>
           </div>
         </div>
         <div class="w3-container">
@@ -103,7 +106,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Lorem ipsum dolor sit amet.</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Web Development! All I need to know in one place</p>
+          <p>Lorem ipsum dolor sit amet</p>
           <hr>
         </div>
         <div class="w3-container">
