--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Mateus Rodrigues</title>
+    <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
+    <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -16,7 +19,7 @@
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom">
             <div class="container">
-                <div class="border rounded-circle border-dark avatar" style="background-image:url(&quot;https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4&quot;);"></div>
+                <div class="border rounded-circle border-dark bounce animated avatar" style="background-image:url(&quot;https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4&quot;);"></div>
                 <div class="about-me">
                     <p>Hello! I am <strong>Mateus</strong>. Welcome to my page (In Development).</p>
                 </div>
