--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Mateus Rodrigues</title>
+    <title>CV - Brand</title>
     <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
     <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,8 +18,8 @@
 <body class="text-dark">
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom">
-            <div class="container">
-                <div class="border rounded-circle border-dark bounce animated avatar" style="background-image:url(&quot;https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4&quot;);"></div>
+            <div class="container" style="padding: 11px;">
+                <div class="border rounded-circle border-dark bounce animated avatar" style="background-image: url(&quot;https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4&quot;);"></div>
                 <div class="about-me">
                     <p>Hello! I am <strong>Mateus</strong>. Welcome to my page (In Development).</p>
                 </div>
@@ -27,8 +27,8 @@
             <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient" style="color: rgb(255,255,255);">
                 <div class="container"><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
             </nav>
-            <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-dark portfolio-navbar">
-                <div class="container"><a class="navbar-brand text-white logo" href="#">mateusbrodrigues</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark portfolio-navbar">
+                <div class="container"><a class="navbar-brand text-white logo" href="#">mateusbrodrigues</a><button data-toggle="collapse" class="navbar-toggler text-white" data-target="#navbarNav" style="border-style: none;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon text-white"></span></button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item text-white item"><a class="nav-link active text-white" href="#">Home</a></li>
