--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>CV - Brand</title>
+    <title>Mateus Rodrigues</title>
     <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
     <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
