Removing content until further updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container" style="padding: 11px;">
                 <div class="border rounded-circle border-dark bounce animated avatar" style="background-image: url(&quot;https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4&quot;);"></div>
                 <div class="about-me">
-                    <p>Hello! I am <strong>Mateus</strong>. Welcome to my page (In Development).</p>
+                    <p>Hello! I am <strong>Mateus</strong>. Welcome to my page!</p>
                 </div>
             </div>
             <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient" style="color: rgb(255,255,255);">
@@ -41,7 +41,12 @@
         </section>
         <section class="portfolio-block cv">
             <div class="container">
-                <div class="work-experience group">
+                
+                <div class="heading">
+                    <h1> 🏗️ Building something here... 👷🏻🚧</h1>
+                </div>
+                
+               <!--  <div class="work-experience group">
                     <div class="heading">
                         <h2 class="text-center">Work Experience</h2>
                     </div>
@@ -74,7 +79,7 @@
                 <div class="group"></div>
                 <div class="hobbies group">
                     <div class="heading"></div>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
