--- a/index.html
+++ b/index.html
@@ -49,40 +49,8 @@
                 <div class="text-center mb-12">
                     <h2 class="text-3xl font-bold">Projetos</h2>
                 </div>
-                <div class="flex flex-wrap -mx-4">
-                    <div class="w-full md:w-1/3 px-4 mb-8">
-                        <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                            <a href="https://via.placeholder.com/800" data-lightbox="projects" data-title="Projeto 1">
-                                <img class="w-full" src="https://via.placeholder.com/300" alt="Projeto 1">
-                            </a>
-                            <div class="p-4">
-                                <h5 class="text-lg font-bold">Projeto 1</h5>
-                                <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="w-full md:w-1/3 px-4 mb-8">
-                        <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                            <a href="https://via.placeholder.com/800" data-lightbox="projects" data-title="Projeto 2">
-                                <img class="w-full" src="https://via.placeholder.com/300" alt="Projeto 2">
-                            </a>
-                            <div class="p-4">
-                                <h5 class="text-lg font-bold">Projeto 2</h5>
-                                <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="w-full md:w-1/3 px-4 mb-8">
-                        <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                            <a href="https://via.placeholder.com/800" data-lightbox="projects" data-title="Projeto 3">
-                                <img class="w-full" src="https://via.placeholder.com/300" alt="Projeto 3">
-                            </a>
-                            <div class="p-4">
-                                <h5 class="text-lg font-bold">Projeto 3</h5>
-                                <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="flex flex-wrap -mx-4" id="projects-container">
+                    <!-- Projetos serão inseridos aqui dinamicamente -->
                 </div>
             </div>
         </section>
@@ -173,8 +141,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-    <script src="assets/js/theme.js"></script>
     <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
