--- a/index.html
+++ b/index.html
@@ -1,148 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Mateus Rodrigues</title>
-    <link rel="icon" type="image/png" sizes="100x100" href="assets/img/monitor.png">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <title>Terminal Routes</title>
+    <style>
+        body {
+            background-color: #1e1e1e;
+            color: #00ff00;
+            font-family: 'Courier New', monospace;
+            margin: 0;
+            padding: 20px;
+            height: 100vh;
+            overflow-y: auto;
+        }
+
+        .terminal {
+            max-width: 800px;
+            margin: 0 auto;
+            text-shadow: 0 0 5px rgba(0, 255, 0, 0.5);
+        }
+
+        .header {
+            color: #00ff00;
+            border-bottom: 2px solid #00ff00;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+
+        .prompt {
+            color: #00ff00;
+            margin: 10px 0;
+        }
+
+        .prompt:before {
+            content: "visitor@github-pages:~$ ";
+            color: #00ff00;
+        }
+
+        a {
+            color: #00ff00;
+            text-decoration: none;
+            display: block;
+            margin: 5px 0;
+            padding-left: 20px;
+            position: relative;
+        }
+
+        a:before {
+            content: "📁 ";
+            position: absolute;
+            left: 0;
+        }
+
+        a:hover {
+            background-color: rgba(0, 255, 0, 0.1);
+            text-decoration: underline;
+        }
+
+        .cursor {
+            display: inline-block;
+            width: 8px;
+            height: 15px;
+            background: #00ff00;
+            margin-left: 3px;
+            animation: blink 1s step-end infinite;
+        }
+
+        @keyframes blink {
+
+            0%,
+            100% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0;
+            }
+        }
+
+        .error {
+            color: #ff0000;
+        }
+
+        .loading {
+            color: #00ff00;
+        }
+    </style>
 </head>
 
-<body class="text-gray-900">
-    <header class="relative">
-        <nav class="bg-gray-900 text-white fixed w-full z-50">
-            <div class="container mx-auto flex items-center justify-between px-4 py-3">
-                <a class="text-xl font-bold" href="#">mateusbrodrigues</a>
-                <button class="block lg:hidden px-3 py-2 border rounded text-gray-200 border-gray-200 hover:text-white hover:border-white" id="nav-toggle">
-                    <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <title>Menu</title>
-                        <path d="M0 3h20v2H0zM0 7h20v2H0zM0 11h20v2H0z" />
-                    </svg>
-                </button>
-                <div class="hidden lg:flex lg:items-center lg:w-auto w-full" id="nav-content">
-                    <ul class="lg:flex lg:justify-end text-base text-gray-400 pt-4 lg:pt-0">
-                        <li><a class="lg:px-4 py-2 block hover:text-white" href="#projects">Projetos</a></li>
-                        <li><a class="lg:px-4 py-2 block hover:text-white" href="#skills">Habilidades</a></li>
-                        <li><a class="lg:px-4 py-2 block hover:text-white" href="#contact">Contato</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="bg-gray-900 text-white text-center py-20 pt-32">
-            <div class="container mx-auto">
-                <a href="https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4" data-lightbox="image" data-title="Mateus Rodrigues">
-                    <div class="border-4 border-gray-900 rounded-full mx-auto" style="background-image: url('https://avatars.githubusercontent.com/u/37751297?s=460&amp;u=538bf7e4f1a9e9c1e9778b44cc56bde02e53b8d5&amp;v=4'); width: 150px; height: 150px; background-size: cover;"></div>
-                </a>
-                <h1 class="text-4xl mt-4">Mateus B. Rodrigues</h1>
-                <p class="text-lg mt-2"> Full Stack Developer</p>
-            </div>
+<body>
+    <div class="terminal">
+        <div class="header">
+            GitHub Pages Terminal - Last login:
+            <?php echo date('D M d H:i:s'); ?> UTC
         </div>
-    </header>
 
-    <main class="page">
-        <section id="projects" class="py-20">
-            <div class="container mx-auto">
-                <div class="text-center mb-12">
-                    <h2 class="text-3xl font-bold">Projetos</h2>
-                </div>
-                <div class="flex flex-wrap -mx-4" id="projects-container">
-                    <!-- Projetos serão inseridos aqui dinamicamente -->
-                </div>
-            </div>
-        </section>
+        <div class="prompt">list-routes --github-user=mateusbrodrigues</div>
 
-        <section id="skills" class="py-20 bg-gray-100">
-            <div class="container mx-auto">
-                <div class="text-center mb-12">
-                    <h2 class="text-4xl font-bold text-gray-800 mb-6">Habilidades</h2>
-                </div>
-                <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-2">
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/JavaScript-F7DF1E?logo=javascript&logoColor=000&style=for-the-badge" alt="JavaScript Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/TypeScript-3178C6?logo=typescript&logoColor=fff&style=for-the-badge" alt="TypeScript Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/React-61DAFB?logo=react&logoColor=000&style=for-the-badge" alt="React Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Node.js-393?logo=nodedotjs&logoColor=fff&style=for-the-badge" alt="Node.js Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Flutter-02569B?logo=flutter&logoColor=fff&style=for-the-badge" alt="Flutter Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Python-3776AB?logo=python&logoColor=fff&style=for-the-badge" alt="Python Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/R-276DC3?logo=r&logoColor=fff&style=for-the-badge" alt="R Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Figma-F24E1E?logo=figma&logoColor=fff&style=for-the-badge" alt="Figma Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Firebase-FFCA28?logo=firebase&logoColor=000&style=for-the-badge" alt="Firebase Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Microsoft%20SQL%20Server-CC2927?logo=microsoftsqlserver&logoColor=fff&style=for-the-badge" alt="Microsoft SQL Server Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/Oracle-F80000?logo=oracle&logoColor=fff&style=for-the-badge" alt="Oracle Badge">
-                    </div>
-                    <div class="flex justify-center items-center">
-                        <img src="https://img.shields.io/badge/PostgreSQL-4169E1?logo=postgresql&logoColor=fff&style=for-the-badge" alt="PostgreSQL Badge">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="py-20">
-            <div class="container mx-auto">
-                <div class="text-center mb-12">
-                    <h2 class="text-3xl font-bold">Contato</h2>
-                </div>
-                <form class="max-w-lg mx-auto">
-                    <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Nome</label>
-                        <input type="text" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="name" required>
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email</label>
-                        <input type="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" required>
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 text-sm font-bold mb-2" for="message">Mensagem</label>
-                        <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="bg-gray-900 text-white py-2 px-4 rounded hover:bg-gray-700 focus:outline-none focus:shadow-outline">Enviar</button>
-                </form>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-gray-900 text-white py-8">
-        <div class="container mx-auto text-center">
-            <div class="flex justify-center space-x-6 mb-4">
-                <a class="text-white text-2xl hover:text-gray-400 transition duration-300" href="https://github.com/mateusbrodrigues" aria-label="GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a class="text-white text-2xl hover:text-gray-400 transition duration-300" href="https://www.linkedin.com/in/mateusbrodrigues/" aria-label="LinkedIn">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </div>
-            <p class="mb-0">&copy; 2024 Mateus B. Rodrigues</p>
+        <div id="routes">
+            <div class="loading">[●] Fetching routes from GitHub API...<span class="cursor"></span></div>
         </div>
-    </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-    <script src="assets/js/script.js"></script>
-    
+        <div class="prompt"><span class="cursor"></span></div>
+    </div>
+
+    <script>
+        // Configurações
+        const GITHUB_USER = 'mateusbrodrigues';
+        const TOPICO_FILTRO = null;
+
+        async function fetchRepos() {
+            try {
+                const response = await fetch(`https://api.github.com/users/${GITHUB_USER}/repos`);
+
+                if (!response.ok) throw new Error(`Error ${response.status}: ${response.statusText}`);
+
+                const repos = await response.json();
+                const routesContainer = document.getElementById('routes');
+                routesContainer.innerHTML = '';
+
+                const validRepos = repos.filter(repo =>
+                    repo.has_pages && (!TOPICO_FILTRO || repo.topics.includes(TOPICO_FILTRO))
+                );
+
+                if (validRepos.length === 0) {
+                    routesContainer.innerHTML = `<div class="error">[✗] No routes found</div>`;
+                    return;
+                }
+
+                validRepos.forEach(repo => {
+                    const link = document.createElement('a');
+                    link.href = `/${repo.name}`;
+                    link.innerHTML = `${repo.name}<span class="cursor"></span>`;
+                    routesContainer.appendChild(link);
+                });
+
+            } catch (error) {
+                document.getElementById('routes').innerHTML = `
+                    <div class="error">
+                        [✗] Failed to load routes: ${error.message}
+                    </div>`;
+            }
+        }
+
+        // Simula delay de terminal
+        setTimeout(fetchRepos, 1500);
+    </script>
 </body>
 
 </html>
